--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.441.0",
+    "mongoose": "^8.6.2",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
